# service-watchdog

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
examples/: docker.yaml  multi-service.yaml  nginx.yaml  node-app.yaml  postgres.yaml
launchd/: com.service-watchdog.plist
src/service_watchdog/: __init__.py  cli.py  config.py  monitor.py  notifiers.py  watchdog.py
systemd/: service-watchdog.service  service-watchdog@.service
tests/: __init__.py  test_config.py  test_monitor.py  test_notifiers.py
